<resources>
    <string name="app_name">CLOUDing</string>
    <string name="quantity">"Quantity: "</string>
    <string name="description">"Description: "</string>
    <string name="add_cloud">Add Cloud</string>
    <string name="add_new_cloud_header">Add A New Cloud</string>
    <string name="hint_cloud_name">Cloud Name</string>
    <string name="hint_cloud_rating">Rating</string>

    <string name="hint_cloud_description">Description</string>
    <string name="delete_cloud">Delete Cloud</string>
    <string name="order_more">Order More</string>
    <string name="email_address">wjplaud83@gmail.com</string>
    <string name="request_for_a_new">"Request for a new "</string>
    <string name="shipment">" shipment"</string>
    <string name="hello">Hello,\n\n</string>
    <string name="request_main">"We would like to request a new shipment of "</string>
    <string name="units">" units by "</string>
    <string name="cloud_rating">Rating: </string>
    <string name="sell_item">Sell Item</string>
    <string name="empty_list_text">There are no clouds on the database. To add a cloud, click on the \"Add Cloud\" button on top and go outside and take some pictures of the sky.</string>
    <string name="empty_warning">There are empty fields. Please input something in all fields to continue.</string>
    <string name="back">Back</string>
    <string name="delete_cloud_question">Delete Cloud?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dt_add_items">Add Items</string>
    <string name="dt_remove_items">Remove Items</string>
    <string name="clouds">"Clouds: "</string>
    <string name="no_inventory">There are no clouds left.</string>
    <string name="empty_sub">There must be a value before we can subtract items to the existing quantity</string>
    <string name="larger_than_current">The value is larger than the current inventory.</string>
    <string name="empty_add">There must be a value before we can add items to the existing quantity.</string>
</resources>