<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.applaudstudios.android.clouding.CloudCreation">

    <RelativeLayout
        android:id="@+id/cloud_options"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#4E4B4F"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_new_cloud_header"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cloud_options"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:onClick="addImage"
            android:scaleType="centerCrop"
            android:src="@drawable/add_image" />

        <EditText
            android:id="@+id/edit_cloud_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_cloud_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_cloud_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_cloud_rating"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_cloud_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_cloud_description"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_add_cloud"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="addCloud"
            android:text="@string/add_cloud" />

    </LinearLayout>

</RelativeLayout>
